answer frames for questions

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -100,3 +100,9 @@ h1
 
 .glyphdark
   color: $button_color
+
+.smallanswer
+  background-color: $button_color
+  padding: 12px
+  border-radius: 12px
+  margin-top: 4px
