--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -5,7 +5,9 @@
 
 <div class="col-xs-6">
   <h1><%= @question.question %></h1>
-  <p> <%= @question.content %> </p>
+  <div class="smallanswer">
+    <p> <%= @question.content %> </p>    
+  </div>
   <hr>
   <p>Answers: </p>
   <% @question.answers.each do |a| %>
